Changelog
=========

9.3.dev0 - (unreleased)
-----------------------

9.2 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

9.1 - (2014-11-20)
------------------
* Feature: formated_provenance now contain the acronym information extracted
  from the title of the data source if found within parenthesis
  [ichim-david refs #21467]

9.0 - (2014-10-01)
------------------
* Feature: removed "Caching" action. We are now using the more complex "Cache"
  action registered by eea.cache
  [ghicaale refs #21143]
* Feature: added upgrade step to remove absolete "Caching" action
  [ghicaale refs #21143]

8.9 - (2014-08-29)
------------------
* Feature: On the daviz edit page ask for confirmation before allowing users to modify data sources
  [szabozo0 refs #20869]
* Bug fix: Exclude relations where related item has link to current daviz in it's provenance info
  [szabozo0 refs #20869]

8.8 - (2014-08-27)
------------------
* Change: Also include eea.cache within full.zcml
  [voineali refs #20678]

8.7 - (2014-06-30)
------------------
* Change: Added documentation for end users
  [szabozo0 refs #18400]
* Change: Read the tags for tutorial screencasts from the description of the video
  [szabozo0 refs #18400]

8.6 - (2014-06-06)
------------------
* Feature: Added tutorials
  [szabozo0 refs #18400]

8.5 - (2014-05-13)
------------------
* Change: Added support for null value for slickgrid boolean fields
  [olimpiurob refs #19206]

8.4 - (2014-04-29)
------------------
* Change: Made Daviz Visualization plone_lock_info aware
  [voineali refs #19172]
* Bug fix: Disabled rename on spreadsheet when editing an already existing visualization
  [szabozo0 refs #19149]