@@ -1,0 +1,10 @@
+""" Interfaces
+"""
+
+from zope.publisher.interfaces.browser import IDefaultBrowserLayer
+
+
+class IDavizLayer(IDefaultBrowserLayer):
+    """ A layer specific for this add-on product.
+    """
+
