@@ -1,6 +1,8 @@
 # -*- coding: utf-8 -*-
 """ Daviz interfaces module
 """
+from eea.daviz.browser.interfaces import IDavizLayer
+
 # BBB Subtypes
 from eea.app.visualization.interfaces import \
      IPossibleVisualization as IPossibleExhibitJson
@@ -10,7 +12,9 @@ from eea.app.visualization.interfaces import \
 # Events
 from eea.daviz.events.interfaces import IDavizRelationsChangedEvent
 
+
 __all__ = [
+    IDavizLayer.__name__,
     IPossibleExhibitJson.__name__,
     IExhibitJson.__name__,
     IDavizRelationsChangedEvent.__name__,
