@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<layers>
+  <layer name="eea.daviz.layer"
+    interface="eea.daviz.interfaces.IDavizLayer" />
+</layers>
