@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <description>EEA Daviz profile</description>
-  <version>9.0</version>
+  <version>9.3</version>
   <dependencies>
     <dependency>profile-eea.forms:default</dependency>
     <dependency>profile-eea.sparql:default</dependency>
